objects/LLC_BI__Lockbox_Service__c.object
<CustomObject>
    <description>This object stores records for Lockbox Service treasury services, including which vendor the financial institution uses for their lockboxes.</description>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Lockbox Service</relationshipLabel>
        <relationshipName>Lockbox_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <label>Lockbox Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Vendor_Selection__c</fullName>
        <label>Vendor Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regulus</fullName>
                </value>
                <value>
                    <fullName>FIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lockbox Service</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Lockbox Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lockbox Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>